--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,47 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+form {
+  display: flex;
+  flex-direction: column; 
+  gap: 10px; 
+  max-width: 300px;
+  margin: 0 auto; 
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  padding: 10px;
+  margin: 5px 0; /* Espacio entre los inputs */
+  border: 1px solid #c9c9c9;
+  border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+button {
+  padding: 10px;
+  border: none;
+  background-color: #2411ce;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
-.card {
-  padding: 2em;
+button:hover {
+  background-color: #1b8deb;
 }
 
-.read-the-docs {
-  color: #888;
+.Card {
+  margin-Top: "20px"; 
+  padding: "20px";
+  border: "1px solid #ccc";
+  border-Radius: "10px"; 
+  max-Width: "400px"; 
+  width: "100%";
+  background-Color: "#f9f9f9",;
+  text-Align: "left";
 }
