--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ form {
 
 input {
   padding: 10px;
-  margin: 5px 0; /* Espacio entre los inputs */
+  margin: 5px 0; 
   border: 1px solid #c9c9c9;
   border-radius: 5px;
 }
