--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,20 @@
   text-align: center;
 }
 
-form {
+form, .card {
   display: flex;
-  flex-direction: column; 
-  gap: 10px; 
+  flex-direction: column;
+  gap: 10px;
   max-width: 300px;
-  margin: 0 auto; 
+  width: 100%; /* Asegura que ambos tengan el mismo ancho */
+  margin: 0 auto;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 input {
   padding: 10px;
-  margin: 5px 0; 
+  margin: 5px 0;
   border: 1px solid #c9c9c9;
   border-radius: 5px;
 }
@@ -35,13 +38,9 @@ button:hover {
   background-color: #1b8deb;
 }
 
-.Card {
-  margin-Top: "20px"; 
-  padding: "20px";
-  border: "1px solid #ccc";
-  border-Radius: "10px"; 
-  max-Width: "400px"; 
-  width: "100%";
-  background-Color: "#f9f9f9",;
-  text-Align: "left";
+.card {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  text-align: left;
 }
